--- a/src/db.properties
+++ b/src/db.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:mysql://localhost/project
+db.url=jdbc:mysql://localhost/swengaprojekt
 db.username=root
-db.password=Celyca
+db.password=Banschibaer13!
